feat(clean): remove stopwords

--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -39,14 +39,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nombre de messages : 353\n"
+      "Nombre de messages : 151\n"
      ]
     },
     {
@@ -78,55 +78,55 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>marilyonne</td>\n",
-       "      <td>@Hortax_FR Ouiiiiiiiiiiiiii</td>\n",
-       "      <td>2025-06-17T11:44:53.061275</td>\n",
+       "      <td>utsuru</td>\n",
+       "      <td>Ils ont dû en vendre à balle des Plague Inc su...</td>\n",
+       "      <td>2025-06-19T09:33:29.317109</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>colbain98</td>\n",
-       "      <td>@gzd6666 +1</td>\n",
-       "      <td>2025-06-17T11:44:55.761498</td>\n",
+       "      <td>salmuth</td>\n",
+       "      <td>Le tuto est plutôt bien foutu aussi.</td>\n",
+       "      <td>2025-06-19T09:33:40.201632</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>leebpascal</td>\n",
-       "      <td>Lille Lens, Marseille Nice, Bordeaux Toulouse,...</td>\n",
-       "      <td>2025-06-17T11:44:57.001659</td>\n",
+       "      <td>thiorah</td>\n",
+       "      <td>@RastelleFR heyo Rara peepoSitHey</td>\n",
+       "      <td>2025-06-19T09:33:43.381817</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>flo__ki</td>\n",
-       "      <td>Au fait @samueletienne pourquoi on a plus le n...</td>\n",
-       "      <td>2025-06-17T11:44:59.168458</td>\n",
+       "      <td>nanoq__</td>\n",
+       "      <td>jour 2 ça part déjà en manif</td>\n",
+       "      <td>2025-06-19T09:33:44.874192</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>bertocheeee</td>\n",
-       "      <td>@clamakinisback il me faisait marrer en commen...</td>\n",
-       "      <td>2025-06-17T11:45:01.757233</td>\n",
+       "      <td>utsuru</td>\n",
+       "      <td>Eux le covid ça les a bien aidé</td>\n",
+       "      <td>2025-06-19T09:33:45.394817</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      username                                            content  \\\n",
-       "0   marilyonne                        @Hortax_FR Ouiiiiiiiiiiiiii   \n",
-       "1    colbain98                                        @gzd6666 +1   \n",
-       "2   leebpascal  Lille Lens, Marseille Nice, Bordeaux Toulouse,...   \n",
-       "3      flo__ki  Au fait @samueletienne pourquoi on a plus le n...   \n",
-       "4  bertocheeee  @clamakinisback il me faisait marrer en commen...   \n",
+       "  username                                            content  \\\n",
+       "0   utsuru  Ils ont dû en vendre à balle des Plague Inc su...   \n",
+       "1  salmuth               Le tuto est plutôt bien foutu aussi.   \n",
+       "2  thiorah                  @RastelleFR heyo Rara peepoSitHey   \n",
+       "3  nanoq__                       jour 2 ça part déjà en manif   \n",
+       "4   utsuru                    Eux le covid ça les a bien aidé   \n",
        "\n",
        "                    timestamp  \n",
-       "0  2025-06-17T11:44:53.061275  \n",
-       "1  2025-06-17T11:44:55.761498  \n",
-       "2  2025-06-17T11:44:57.001659  \n",
-       "3  2025-06-17T11:44:59.168458  \n",
-       "4  2025-06-17T11:45:01.757233  "
+       "0  2025-06-19T09:33:29.317109  \n",
+       "1  2025-06-19T09:33:40.201632  \n",
+       "2  2025-06-19T09:33:43.381817  \n",
+       "3  2025-06-19T09:33:44.874192  \n",
+       "4  2025-06-19T09:33:45.394817  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -186,55 +186,55 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>marilyonne</td>\n",
-       "      <td>oui ##iiiiiiii ##iiiii</td>\n",
-       "      <td>2025-06-17T11:44:53.061275</td>\n",
+       "      <td>utsuru</td>\n",
+       "      <td>vendre a balle pla ##gue inc mobile</td>\n",
+       "      <td>2025-06-19T09:33:29.317109</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>colbain98</td>\n",
-       "      <td></td>\n",
-       "      <td>2025-06-17T11:44:55.761498</td>\n",
+       "      <td>salmuth</td>\n",
+       "      <td>tut ##o plut ##ot bien fout ##u aussi</td>\n",
+       "      <td>2025-06-19T09:33:40.201632</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>leebpascal</td>\n",
-       "      <td>lil ##le len ##s marseill ##e ni ##ce borde ##...</td>\n",
-       "      <td>2025-06-17T11:44:57.001659</td>\n",
+       "      <td>thiorah</td>\n",
+       "      <td>he ##y ##o rar ##a pe ##ep ##osi ##the ##y</td>\n",
+       "      <td>2025-06-19T09:33:43.381817</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>flo__ki</td>\n",
-       "      <td>au fait pourquoi on a plus le num ##ero de la ...</td>\n",
-       "      <td>2025-06-17T11:44:59.168458</td>\n",
+       "      <td>nanoq__</td>\n",
+       "      <td>jour 2 ca part dej ##a manif</td>\n",
+       "      <td>2025-06-19T09:33:44.874192</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>bertocheeee</td>\n",
-       "      <td>il me faisait mar ##rer en comment ##ary sur l...</td>\n",
-       "      <td>2025-06-17T11:45:01.757233</td>\n",
+       "      <td>utsuru</td>\n",
+       "      <td>co ##vid ca a bien aide</td>\n",
+       "      <td>2025-06-19T09:33:45.394817</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      username                                            content  \\\n",
-       "0   marilyonne                             oui ##iiiiiiii ##iiiii   \n",
-       "1    colbain98                                                      \n",
-       "2   leebpascal  lil ##le len ##s marseill ##e ni ##ce borde ##...   \n",
-       "3      flo__ki  au fait pourquoi on a plus le num ##ero de la ...   \n",
-       "4  bertocheeee  il me faisait mar ##rer en comment ##ary sur l...   \n",
+       "  username                                     content  \\\n",
+       "0   utsuru         vendre a balle pla ##gue inc mobile   \n",
+       "1  salmuth       tut ##o plut ##ot bien fout ##u aussi   \n",
+       "2  thiorah  he ##y ##o rar ##a pe ##ep ##osi ##the ##y   \n",
+       "3  nanoq__                jour 2 ca part dej ##a manif   \n",
+       "4   utsuru                     co ##vid ca a bien aide   \n",
        "\n",
        "                    timestamp  \n",
-       "0  2025-06-17T11:44:53.061275  \n",
-       "1  2025-06-17T11:44:55.761498  \n",
-       "2  2025-06-17T11:44:57.001659  \n",
-       "3  2025-06-17T11:44:59.168458  \n",
-       "4  2025-06-17T11:45:01.757233  "
+       "0  2025-06-19T09:33:29.317109  \n",
+       "1  2025-06-19T09:33:40.201632  \n",
+       "2  2025-06-19T09:33:43.381817  \n",
+       "3  2025-06-19T09:33:44.874192  \n",
+       "4  2025-06-19T09:33:45.394817  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,12 +255,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Données sauvegardées\n"
+     ]
+    }
+   ],
    "source": [
     "# Sauvegarde des données nettoyées\n",
-    "df_cleaned.to_csv(\"../data/chat_messages_samueletienne_clean.csv\", index=False)\n",
+    "df_cleaned.to_csv(\"../data/chat_messages_mynthos_clean.csv\", index=False)\n",
     "print(\"✅ Données sauvegardées\")"
    ]
   }
