--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -11,23 +11,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\jaech\\miniconda3\\envs\\TwitchPulseEnv\\Lib\\site-packages\\requests\\__init__.py:86: RequestsDependencyWarning: Unable to find acceptable character detection dependency (chardet or charset_normalizer).\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import sys\n",
     "sys.path.append('..')\n",
-    "from src.clean import clean_messages"
+    "from src.clean import clean_messages\n",
+    "from src.embedding import create_embeddings_dataframe"
    ]
   },
   {
@@ -39,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +118,7 @@
        "4  2025-06-19T09:33:45.394817  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +219,7 @@
        "4   utsuru             covid ca avoir bien aide  2025-06-19T09:33:45.394817"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,12 +235,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Embedding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8f2d035ace5c4d67935b23f965cfe3d5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Batches:   0%|          | 0/5 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df_with_embeddings, embeddings = create_embeddings_dataframe(\n",
+    "    df_cleaned, \n",
+    "    model_name='paraphrase-multilingual-MiniLM-L12-v2'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Sauvegarde des données nettoyées"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +287,7 @@
    ],
    "source": [
     "# Sauvegarde des donnees nettoyees\n",
-    "df_cleaned.to_csv(\"../data/chat_messages_mynthos_clean.csv\", index=False)\n",
+    "df_with_embeddings.to_csv(\"../data/chat_messages_mynthos_clean.csv\", index=False)\n",
     "print(\"✅ Données sauvegardées\")"
    ]
   }
